--- a/index.html
+++ b/index.html
@@ -30,17 +30,43 @@
 
       <!-- Local storage container -->
       <div id="old-cities-container" class="city-group"></div>
-
-
     </div>
 
     <!-- empty container: for city -->
+    <!-- <section> -->
       <div id="city-container" class="list-group"></div>
+    <!-- </section> -->
 
-    <!-- empty container: for 5-day forecase -->
-    <!-- <div id="city-container" class="list-group"></div> -->
+    <!-- empty container: for 5-day forecast -->
+    <section>
+    <div id="city-container-2" class="list-group">
+      <card id="day1" class="cards"></card>
+      <card id="day2" class="cards"></card>
+      <card id="day3" class="cards"></card>
+      <card id="day4" class="cards"></card>
+      <card id="day5" class="cards"></card>
 
+    <!-- <form id="user-form" class="card-body">
+      <input name="search" id="search" type="text" autofocus="true" class="form-input" />
+    </form>
 
+    <form id="user-form" class="card-body">
+      <input name="search" id="search" type="text" autofocus="true" class="form-input" />
+    </form>
+
+    <form id="user-form" class="card-body">
+      <input name="search" id="search" type="text" autofocus="true" class="form-input" />
+    </form>
+
+    <form id="user-form" class="card-body">
+      <input name="search" id="search" type="text" autofocus="true" class="form-input" />
+    </form>
+
+    <form id="user-form" class="card-body">
+      <input name="search" id="search" type="text" autofocus="true" class="form-input" />
+    </form> -->
+  </div>
+  </section>
 
 
   </main>
