--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
     <!-- empty container: for 5-day forecast -->
     <section>
       <h2 id="five-day-forecast"></h2>
-    <div id="city-container-2" class="list-group">
-      <div id="day1" class="cards"></div>
-      <div id="day2" class="cards"></div>
-      <div id="day3" class="cards"></div>
-      <div id="day4" class="cards"></div>
-      <div id="day5" class="cards"></div>
+    <div id="city-container-2" class="list-group2">
+      <div id="day1" class="day1"></div>
+      <div id="day2" class="day2"></div>
+      <div id="day3" class="day3"></div>
+      <div id="day4" class="day4"></div>
+      <div id="day5" class="day5"></div>
 
     <!-- <form id="user-form" class="card-body">
       <input name="search" id="search" type="text" autofocus="true" class="form-input" />
